--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -1,8 +1,13 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+#map {
+  width:100%;
+  height:620px;
 }
 
-a {
-  color: #00B7FF;
+.color-display {
+  display:inline-block;
+  width:20px;
+  position:relative;
+  height:20px;
+  top:4px;
+  margin-left:5px;
 }
