adding bikeshare data

--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -16,6 +16,7 @@ html
         script(type='text/javascript', src='javascripts/app.js' )
         script(type='text/javascript', src='javascripts/controllers/map.js')
         script(type='text/javascript', src='javascripts/controllers/timeframe.js')
+        script(type='text/javascript', src='javascripts/controllers/bikeshare.js')
         script(type='text/javascript', src='javascripts/services/trafficjam-api.js')
         script(type='text/javascript', src='javascripts/services/map-service.js')
     body(ng-app='trafficjam')
