--- a/server/public/views/map.html
+++ b/server/public/views/map.html
@@ -3,8 +3,13 @@
 
         <a class="navbar-brand" href="#">ATV (Aggregated Traffic Volume)</a>
 
-
     </div>
+    <div class="navbar-nav">
+        <p class="navbar-btn" ng-controller="BikeShareCtrl">
+            <a class="btn {{btnActiveClass}}" ng-click="toggleBikeShare()">BikeShare</a>
+        </p>
+    </div>
+
 </nav>
 <div class="row">
     <div class="col-md-8"><div id="map"></div></div>
