adding green active state to toggles

--- a/server/public/views/map.html
+++ b/server/public/views/map.html
@@ -43,7 +43,7 @@
                     </p>
 
                 <p class="input-group">
-                <button class="btn btn-default" ng-click="toggleTimeframe()">Toggle Timeframe</button>
+                <button class="btn {{toggleClass}}" ng-click="toggleTimeframe()">Toggle Timeframe</button>
                 </p>
             </p>
         </div>
